--- a/source/layout.html
+++ b/source/layout.html
@@ -228,8 +228,11 @@
         </div>
       </div>
     {% endif %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{{ 'api' | theme_js_url }}"></script>
     <script src="{{ theme | theme_js_url }}"></script>
+    {% if page.full_url contains '/product/' %}
+      <script>Product.find('{{ product.permalink }}', processProduct)</script>
+    {% endif %}
   </body>
 </html>
