--- a/source/product.html
+++ b/source/product.html
@@ -13,41 +13,57 @@
     <img alt="Image of {{ product.name | escape }}" class="primary-product-image" src="{{ product.image | product_image_url | constrain: 1500 }}">
   </div>
 
-  <div class="product-page-details">
-    {% if product.status == 'active' %}
-      <form action="/cart" class="product-form" method="post">
-        {{ product | product_quantity_input, 1, 'product-quantity', 'product-quantity' }}
-
-        {% if product.has_default_option %}
-          {{ product.option | hidden_option_input }}
-          <button class="button add-to-cart-button" type="submit" data-adding-text="Adding..." data-added-text="Added!">Add to Cart</button>
-        {% else %}
-          {{ product.options_in_stock | options_select }}
-
-          <div class="product-option-selection" data-adding-text="Adding..." data-added-text="Added!">
-            <button class="product-option-selection-button" type="button" tabindex="0">
-              Select Option <svg class="down-arrow" width="11" height="13" viewBox="0 0 11 13"><path d="M9.65 7.65l.71.71-4.5 4.5c-.1.1-.23.15-.35.15-.12 0-.26-.05-.35-.15l-4.5-4.5.71-.71 3.65 3.65V0h1v11.29l3.63-3.64z" fill-rule="nonzero" /></svg>
-            </button>
-            <ul class="product-option-list">
-              {% for option in product.options_in_stock	 %}
-                <li role="button" tabindex="0" class="dropdown-link" data-option-id="{{ option.id }}" {% if option.sold_out %} class="disabled"{% endif %}>
-                  <span class="product-option"><span class="option-name">{{ option.name }}</span>{% if option.price != product.default_price %} - <span class="option-price">{{ option.price | money: theme.money_format }}</span>{% endif %} {% if option.sold_out %}<span class="option-status">(Sold out)</span>{% endif %}</span>
-                </li>
-              {% endfor %}
-            </ul>
-          </div>
-        {% endif %}
-      </form>
-    {% endif %}
+  <div class="product-page-details{% if product.status != 'active' %} inactive{% endif %}">
     <div class="product-page-titles">
       <h1 class="page-title product-name">{{ product.name }}</h1>
       <div class="product-page-price">
-        {{ product.default_price | money: theme.money_format }}
+        {% if product.variable_pricing %}
+          {{ product.min_price | money: theme.money_format }} - {{ product.max_price | money: theme.money_format }}
+        {% else %}
+          {{ product.default_price | money: theme.money_format }}
+        {% endif %}
         {% if product_status != blank %}
           &mdash; <span class="product-status">{{ product_status }}</span>
         {% endif %}
       </div>
     </div>
+
+    {% if product.status == 'active' %}
+      <form method="post" class="product-form" action="/cart" accept-charset="utf8">
+        <input type="hidden" name="utf8" value='✓'>
+        {% if product.has_default_option %}
+          {{ product.option | hidden_option_input }}
+        {% else %}
+          {% if product.has_option_groups %}
+            <div class="product_option_groups">
+              <input id="option" name="cart[add][id]" type="hidden" value="0">
+              {% for option_group in product.option_groups %}
+                <div class="select">
+                  <select data-unavailable-text="(Unavailable)" data-sold-text="(Sold out)" data-group-id="{{ option_group.id }}" data-group-name="{{ option_group.name | escape }}" class="product_option_group" name="option_group[{{ option_group.id }}]" aria-label="Select {{ option_group.name | escape }}">
+                    <option value="0" disabled="disabled" selected>Select {{ option_group.name }}</option>
+                    {% for value in option_group.values %}
+                      <option value="{{ value.id }}" data-name="{{ value.name | escape }}">{{ value.name }}</option>
+                    {% endfor %}
+                  </select>
+                  <svg class="down-arrow" width="11" height="13" viewBox="0 0 11 13"><path d="M9.65 7.65l.71.71-4.5 4.5c-.1.1-.23.15-.35.15-.12 0-.26-.05-.35-.15l-4.5-4.5.71-.71 3.65 3.65V0h1v11.29l3.63-3.64z" fill-rule="nonzero" /></svg>
+                </div>
+              {% endfor %}
+            </div>
+          {% else %}
+            <div class="select">
+              <select class="product_option_select" id="option" name="[cart][add][id]" aria-label="Select option">
+                <option value="0" disabled="disabled" selected>Select option</option>
+                {% for option in product.options %}
+                  <option value="{{ option.id }}" data-price="{{ option.price }}"{% if option.sold_out %} disabled="disabled"{% endif %}>{{ option.name }} {% if option.sold_out %} (Sold out){% endif %}</option>
+                {% endfor %}
+              </select>
+              <svg class="down-arrow" width="11" height="13" viewBox="0 0 11 13"><path d="M9.65 7.65l.71.71-4.5 4.5c-.1.1-.23.15-.35.15-.12 0-.26-.05-.35-.15l-4.5-4.5.71-.71 3.65 3.65V0h1v11.29l3.63-3.64z" fill-rule="nonzero" /></svg>
+            </div>
+          {% endif %}
+        {% endif %}
+        <button class="button add-to-cart-button" name="submit" type="submit" title="Add to Cart" data-adding-text="Adding..." data-added-text="Added!" data-add-title="Add to Cart" data-sold-title="Sold out">Add to Cart</button>
+      </form>
+    {% endif %}
 
   	<div class="product-description">
   		{% if product.description != blank %}
