--- a/source/layout.html
+++ b/source/layout.html
@@ -3,18 +3,18 @@
   <head>
     <title>{{ page.name }} | {{ store.name }}</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ theme | theme_css_url }}" media="screen" rel="stylesheet" type="text/css">
     {{ head_content }}
   </head>
   <body id="{{ page.permalink }}" class="{{ page.category }}">
     {% if theme.announcement_message_text != blank %}
-      <div class="flash-message">
+      <aside class="flash-message">
         <div class="flash-message-text">{{ theme.announcement_message_text }}</div>
         <div class="flash-message-close" title="Close announcement message">
           <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
         </div>
-      </div>
+      </aside>
     {% endif %}
     <header class="header">
       <div class="wrapper">
@@ -130,7 +130,7 @@
         </div>
       </nav>
     </header>
-    <main class="content">
+    <main class="content" id="main">
       <div class="wrapper">
         {% if page.category == 'custom' %}
           <h1 class="page-title">{{ page.name }}</h1>
