--- a/source/layout.html
+++ b/source/layout.html
@@ -11,9 +11,9 @@
     {% if theme.announcement_message_text != blank %}
       <aside class="flash-message">
         <div class="flash-message-text">{{ theme.announcement_message_text }}</div>
-        <div class="flash-message-close" title="Close announcement message">
+        <button class="flash-message-close" title="Close announcement message">
           <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
-        </div>
+        </button>
       </aside>
     {% endif %}
     <header class="header">
@@ -41,7 +41,9 @@
                   {% if theme.show_search %}
                     <li class="dropdown-search">
                       <form class="search-form" name="search" action="/products" method="get" accept-charset="utf8">
-                        <button type="submit" class="search-button"><svg width="12" height="12" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle stroke="{{ theme.text_color }}" cx="5" cy="5" r="4.5"/><path fill="{{ theme.text_color }}" d="M8.318 7.732l2.829 2.829-.707.707L7.61 8.44z"/></g></svg></button>
+                        <button type="submit" class="search-button">
+                          <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle stroke="{{ theme.text_color }}" cx="5" cy="5" r="4.5"/><path fill="{{ theme.text_color }}" d="M8.318 7.732l2.829 2.829-.707.707L7.61 8.44z"/></g></svg>
+                        </button>
                         <input type="hidden" name="utf8" value='✓'>
                         <input class="search-input" id="search" name="search" placeholder="Search..." type="text" autocomplete="off" />
                       </form>
@@ -59,7 +61,9 @@
                     {% endfor %}
                   {% endif %}
                 </ul>
-                <button class="close-overlay"><svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill="#325DA8" fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg></button>
+                <button class="close-overlay">
+                  <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill="#325DA8" fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
+                </button>
               {% endif %}
             </li>
             {% if pages.all != blank or store.website != blank %}
@@ -120,7 +124,9 @@
                       <li><a target="_blank" title="Tumblr" href="{{ theme.tumblr_url }}">Tumblr</a></li>
                     {% endif %}
                   </ul>
-                  <button class="close-overlay"><svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill="#325DA8" fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg></button>
+                  <button class="close-overlay">
+                    <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill="#325DA8" fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
+                  </button>
                 </li>
               {% endif %}
             {% endif %}
@@ -215,7 +221,9 @@
               <div class="error-list-item">{{ error }}</div>
             {% endfor %}
           </div>
-          <div class="close-errors"><svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg></div>
+          <button class="close-errors">
+            <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
+          </button>
         </div>
       </div>
 
@@ -224,7 +232,9 @@
         <div class="error-background"></div>
         <div class="error-container">
           <div class="error-list"></div>
-          <div class="close-errors"><svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg></div>
+          <button class="close-errors">
+            <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><path d="M10.11 1.596l-8.484 8.485-.707-.707L9.404.89z"/><path d="M1.626.89l8.485 8.484-.707.707L.919 1.596z"/></g></svg>
+          </button>
         </div>
       </div>
     {% endif %}
