Fix incorrect endif/div closing

--- a/source/products.html
+++ b/source/products.html
@@ -37,9 +37,10 @@
         {% if paginate.next.is_link %}
           <a class="pagination-link next-link" href="{{ paginate.next.url }}" title="Next Page">
             <svg class="pagination-arrow next-arrow" width="9" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M9 5.787l-.73-.694-3.248 3.04V0H3.978v8.133L.731 5.093 0 5.787 4.5 10z" fill-rule="nonzero"/></svg>
-          </a>{% endif %}
+          </a>
         {% endif %}
       </div>
+    {% endif %}
   {% else %}
     {% if page.full_url contains "search=" %}
       <h1 class="page-title products-page-title">No products matched your search.</h1>
