Update contact form labels

--- a/source/contact.html
+++ b/source/contact.html
@@ -6,23 +6,23 @@
     <form method="post" action="/contact" class="contact-form">
 
       <div class="contact-form-group">
-        <label class="contact-form-label contact-name" for="name-input">Name</label>
+        <label class="contact-form-label contact-name" for="name">Name</label>
         {{ contact | contact_input: 'name' }}
       </div>
       <div class="contact-form-group">
-        <label class="contact-form-label contact-email" for="email-input">Email</label>
+        <label class="contact-form-label contact-email" for="email">Email</label>
         {{ contact | contact_input: 'email' }}
       </div>
       <div class="contact-form-group">
-        <label class="contact-form-label contact-subject" for="subject-input">Subject</label>
+        <label class="contact-form-label contact-subject" for="subject">Subject</label>
         {{ contact | contact_input: 'subject' }}
       </div>
       <div class="contact-form-group">
-        <label class="contact-form-label contact-message" for="message-textarea">Message</label>
+        <label class="contact-form-label contact-message" for="message">Message</label>
         {{ contact | contact_input: 'message' }}
       </div>
       <div class="contact-form-group">
-        <label class="contact-form-label contact-captcha">Spam check</label>
+        <label class="contact-form-label contact-captcha" for="captcha">Spam check</label>
         {{ contact | contact_input: 'captcha' }} {{ contact.captcha }}
         <div class="captcha-instructions">Enter the characters from the image</div>
       </div>
