--- a/source/layout.html
+++ b/source/layout.html
@@ -44,12 +44,11 @@
                     <li class="dropdown-search">
                       <form class="search-form" name="search" action="/products" method="get" accept-charset="utf8">
                         <label for="search" class="visually-hidden">Search products</label>
-
                         <input type="hidden" name="utf8" value='✓'>
                         <input class="search-input" id="search" name="search" placeholder="Search..." type="text" autocomplete="off" />
                         <button type="submit" class="search-button" aria-label="Submit search form">
                           <svg aria-hidden="true" height="15" width="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.15 11.27">
-                            <path d="M11.15 10.56L8.8 8.21A4.93 4.93 0 0010 5a5.06 5.06 0 10-1.92 3.91l2.36 2.36zM1 5a4 4 0 114 4 4 4 0 01-4-4z"fill-rule="evenodd"/>
+                            <path d="M11.15 10.56L8.8 8.21A4.93 4.93 0 0010 5a5.06 5.06 0 10-1.92 3.91l2.36 2.36zM1 5a4 4 0 114 4 4 4 0 01-4-4z" fill-rule="evenodd"/>
                           </svg>
                         </button>
                       </form>
@@ -155,19 +154,15 @@
           <h1 class="page-title">{{ page.name }}</h1>
           <div class="page-content {{ page.category }}-content">
             {{ page_content | paragraphs }}
-
-              {% if page.name == theme.lookbook_page_name %}
-
-                {% if theme.image_sets.lookbook_images.size > 0 %}
-                  <div class="lookbook-gallery">
-                    {% for image in theme.image_sets.lookbook_images %}
-                      <img alt="" class="lazy lookbook-gallery-image" src="{{ image.url | constrain: '100','' }}" data-src="{{ image.url | constrain: '760','' }}" data-srcset="{{ image.url | constrain: '1520','' }} 2x, {{ image.url | constrain: '760','' }} 1x">
-                    {% endfor %}
-                  </div>
-                {% endif %}
-
+            {% if page.name == theme.lookbook_page_name %}
+              {% if theme.image_sets.lookbook_images.size > 0 %}
+                <div class="lookbook-gallery">
+                  {% for image in theme.image_sets.lookbook_images %}
+                    <img alt="" class="lazy lookbook-gallery-image" src="{{ image.url | constrain: '100','' }}" data-src="{{ image.url | constrain: '760','' }}" data-srcset="{{ image.url | constrain: '1520','' }} 2x, {{ image.url | constrain: '760','' }} 1x">
+                  {% endfor %}
+                </div>
               {% endif %}
-
+            {% endif %}
           </div>
         {% else %}
           {% if errors != blank %}
@@ -182,75 +177,135 @@
           {{ page_content }}
         {% endif %}
       </div>
-      {% if page.full_url contains '/product/' %}
-        {% if theme.show_similar_products %}
-          {% if theme.max_products_per_row == 4 %}
-            {% assign product_image_constrain = 300 %}
-            {% assign product_image_constrain_large = product_image_constrain | times: 2 %}
-          {% elsif theme.max_products_per_row == 3 %}
-            {% assign product_image_constrain = 400 %}
-            {% assign product_image_constrain_large = product_image_constrain | times: 2 %}
-          {% elsif theme.max_products_per_row == 2 %}
-            {% assign product_image_constrain = 700 %}
-            {% assign product_image_constrain_large = product_image_constrain | times: 2 %}
-          {% endif %}
-          {% if product.categories != blank %}
-            {% for category in product.categories %}
-              {% capture product_divs %}
-                {% for category_product in category.products %}
-                  {% assign product_status = '' %}
-                  {% case category_product.status %}
-                    {% when 'active' %}
-                      {% if category_product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
-                    {% when 'sold-out' %}
-                      {% assign product_status = 'Sold out' %}
-                    {% when 'coming-soon' %}
-                      {% assign product_status = 'Coming soon' %}
-                  {% endcase %}
-                  {% capture image_class %}
-                    {% if category_product.image.height > category_product.image.width %}
-                      image-tall
-                    {% elsif category_product.image.height < category_product.image.width %}
-                      image-wide
-                    {% else %}
-                      image-square
+
+      {% if page.full_url contains '/product/' and theme.show_similar_products and product.categories != blank %}
+        {% for category in product.categories %}
+          {% assign this_product = product %}
+          {% capture product_divs %}
+
+            {% for product in category.products %}
+              {% if this_product.id != product.id %}
+                {% if theme.max_products_per_row == 4 %}
+                  {% assign product_image_constrain_width = 288 %}
+                  {% assign product_image_constrain_height = 288 %}
+                  {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                  {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                {% elsif theme.max_products_per_row == 3 %}
+                  {% assign product_image_constrain_width = 390 %}
+                  {% assign product_image_constrain_height = 390 %}
+                  {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                  {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                {% elsif theme.max_products_per_row == 2 %}
+                  {% assign product_image_constrain_width = 592 %}
+                  {% assign product_image_constrain_height = 526 %}
+                  {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                  {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                {% elsif theme.max_products_per_row == 1 %}
+                  {% assign product_image_constrain_width = 1200 %}
+                  {% assign product_image_constrain_height = 1200 %}
+                  {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                  {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                {% endif %}
+                {% assign thumb_constrain_width = 30 %}
+                {% assign thumb_constrain_height = 30 %}
+
+                {% assign product_status = '' %}
+                {% case product.status %}
+                  {% when 'active' %}
+                    {% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
+                  {% when 'sold-out' %}
+                    {% assign product_status = 'Sold out' %}
+                  {% when 'coming-soon' %}
+                    {% assign product_status = 'Coming soon' %}
+                {% endcase %}
+                {% capture image_class %}
+                  {% if product.image.height > product.image.width %}
+                    image-tall
+                    {% if theme.grid_image_style == 'crop-to-square' %}
+                      {% assign product_image_constrain_height = '' %}
+                      {% assign product_image_constrain_height_large = '' %}
+                      {% assign thumb_constrain_height = '' %}
                     {% endif %}
-                  {% endcapture %}
-                  <a class="product-list-thumb {{ theme.grid_image_style }}" href="{{ category_product.url }}" title="View {{ category_product.name | escape }}">
-                    <div class="product-list-thumb-container">
-                      <figure class="product-list-image-container {% if category_product.images[1] != blank and theme.secondary_image_on_hover == true %}show-secondary{% endif %}">
-                        <img alt="" class="lazy product-list-image {{ image_class }}" src="{{ category_product.image | product_image_url | constrain: 50 }}" data-src="{{ category_product.image | product_image_url | constrain: product_image_constrain }}" data-srcset="{{ category_product.image | product_image_url | constrain: product_image_constrain_large }} 2x, {{ category_product.image | product_image_url | constrain: product_image_constrain }} 1x">
-                        {% if category_product.images[1] != blank and theme.secondary_image_on_hover == true %}
+                  {% elsif product.image.height < product.image.width %}
+                    image-wide
+                    {% if theme.grid_image_style == 'crop-to-square' %}
+                      {% assign product_image_constrain_width = '' %}
+                      {% assign product_image_constrain_width_large = '' %}
+                      {% assign thumb_constrain_width = '' %}
+                    {% endif %}
+                  {% else %}
+                    image-square
+                  {% endif %}
+                {% endcapture %}
+                <a class="product-list-thumb {{ theme.grid_image_style }}" href="{{ product.url }}" title="View {{ product.name | escape }}">
+                  <div class="product-list-thumb-container">
+                    <figure class="product-list-image-container {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}show-secondary{% endif %}">
+                      <div class="image-wrapper">
+                        <div alt="" class="lazy product-list-image {{ image_class }}" src="{{ product.image | product_image_url | constrain: thumb_constrain_width,thumb_constrain_height }}" data-src="{{ product.image | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }}" data-srcset="{{ product.image | product_image_url | constrain: product_image_constrain_width_large, product_image_constrain_height_large }} 2x, {{ product.image | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }} 1x"></div>
+                        {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}
+                          {% if theme.max_products_per_row == 4 %}
+                            {% assign product_image_constrain_width = 288 %}
+                            {% assign product_image_constrain_height = 288 %}
+                            {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                            {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                          {% elsif theme.max_products_per_row == 3 %}
+                            {% assign product_image_constrain_width = 390 %}
+                            {% assign product_image_constrain_height = 390 %}
+                            {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                            {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                          {% elsif theme.max_products_per_row == 2 %}
+                            {% assign product_image_constrain_width = 592 %}
+                            {% assign product_image_constrain_height = 526 %}
+                            {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                            {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                          {% elsif theme.max_products_per_row == 1 %}
+                            {% assign product_image_constrain_width = 1200 %}
+                            {% assign product_image_constrain_height = 1200 %}
+                            {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                            {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                          {% endif %}
+                          {% assign thumb_constrain_width = 30 %}
+                          {% assign thumb_constrain_height = 30 %}
                           {% capture secondary_image_class %}
-                            {% if category_product.images[1].height > category_product.images[1].width %}
+                            {% if product.images[1].height > product.images[1].width %}
                               image-tall
-                            {% elsif category_product.images[1].height < category_product.images[1].width %}
+                              {% if theme.grid_image_style == 'crop-to-square' %}
+                                {% assign product_image_constrain_height = '' %}
+                                {% assign product_image_constrain_height_large = '' %}
+                                {% assign thumb_constrain_height = '' %}
+                              {% endif %}
+                            {% elsif product.images[1].height < product.images[1].width %}
                               image-wide
+                              {% if theme.grid_image_style == 'crop-to-square' %}
+                                {% assign product_image_constrain_width = '' %}
+                                {% assign product_image_constrain_width_large = '' %}
+                                {% assign thumb_constrain_width = '' %}
+                              {% endif %}
                             {% else %}
                               image-square
                             {% endif %}
                           {% endcapture %}
-                          <img alt="" class="lazy product-list-image {{ secondary_image_class }}" src="{{ category_product.images[1] | product_image_url | constrain: 50 }}" data-src="{{ category_product.images[1] | product_image_url | constrain: product_image_constrain }}" data-srcset="{{ category_product.images[1] | product_image_url | constrain: product_image_constrain_large }} 2x, {{ category_product.images[1] | product_image_url | constrain: product_image_constrain }} 1x">
+                          <div alt="" class="lazy product-list-image {{ secondary_image_class }}" src="{{ product.images[1] | product_image_url | constrain: thumb_constrain_width,thumb_constrain_height }}" data-src="{{ product.images[1] | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }}" data-srcset="{{ product.images[1] | product_image_url | constrain: product_image_constrain_width_large, product_image_constrain_height_large }} 2x, {{ product.images[1] | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }} 1x"></div>
                         {% endif %}
-                      </figure>
-                    </div>
-                    <div class="product-list-thumb-info">
-                      <div class="product-list-thumb-name">{{ category_product.name }}</div>
-                      <div class="product-list-thumb-price">
-                        {% if category_product.variable_pricing %}
-                          {{ category_product.min_price | money: theme.money_format }} - {{ category_product.max_price | money: theme.money_format }}
-                        {% else %}
-                          {{ category_product.default_price | money: theme.money_format }}
-                        {% endif %}
-                        {% if product_status != blank %}<span class="product-list-thumb-status">&mdash; {{ product_status }}</span>{% endif %}
                       </div>
+                    </figure>
+                  </div>
+                  <div class="product-list-thumb-info">
+                    <div class="product-list-thumb-name">{{ product.name }}</div>
+                    <div class="product-list-thumb-price">
+                      {% if product.variable_pricing %}
+                        {{ product.min_price | money: theme.money_format }} - {{ product.max_price | money: theme.money_format }}
+                      {% else %}
+                        {{ product.default_price | money: theme.money_format }}
+                      {% endif %}
+                      {% if product_status != blank %}<span class="product-list-thumb-status">&mdash; {{ product_status }}</span>{% endif %}
                     </div>
-                  </a>
-                {% endfor %}
-              {% endcapture %}
+                  </div>
+                </a>
+              {% endif %}
             {% endfor %}
-          {% endif %}
-        {% endif %}
+          {% endcapture %}
+        {% endfor %}
       {% endif %}
 
       {% if product_divs != blank %}
@@ -262,6 +317,7 @@
           </div>
         </div>
       {% endif %}
+
     </main>
     <footer class="footer">
       <div class="wrapper">
