fix: Update search form in layout.html with role attribute
Resolves WEB-3982

--- a/source/layout.html
+++ b/source/layout.html
@@ -42,7 +42,7 @@
                   </button>
                   {% if theme.show_search %}
                     <li class="dropdown-search">
-                      <form class="search-form" name="search" action="/products" method="get" accept-charset="utf8">
+                      <form class="search-form" name="search" action="/products" method="get" accept-charset="utf8" role="search">
                         <label for="search" class="visually-hidden">Search products</label>
                         <input type="hidden" name="utf8" value='✓'>
                         <input class="search-input" id="search" name="search" placeholder="Search..." type="text" autocomplete="off" />
